[SRTT-3031] null 방어